deploy/base/ingress/easi-frontend_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easi-frontend-ingress
  namespace: easi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: easi.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easi-frontend
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: easi-backend
                port:
                  number: 8080
