deploy/base/ingress/easi_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easi-ingress
  namespace: easi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: easi.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easi-frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: easi-backend
                port:
                  number: 8080
          - path: /mail
            pathType: Prefix
            backend:
              service:
                name: email
                port:
                  number: 1080
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: minio
                port: 
                  number: 9001
