deploy/base/ingress/email_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-ingress
  namespace: easi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: email.localdev.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email
                port:
                  number: 1080
